--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
   <header class="sec1">
+  <div class="image-background">
   <nav>
   <img src="images/logo.svg" alt=""> 
   <div class="left-nav">
@@ -66,10 +67,10 @@
 <a href=""><div>Start for Free</div></a> 
 <a href=""><div>Learn More</div></a> 
 </div>
-  </header>
-  </div>
+</div>
+</div>
 </nav>
-
+</header>
 <Section>
  
   <div class="Section-intro">
