--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Overpass">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="script.js">
 
   <title>Frontend Mentor | [Blogr]</title>
 
@@ -71,6 +70,57 @@
 </div>
 </nav>
 </header>
+<div id="mobilenav" class="mobilenav">
+  <ul>
+    <li class="connect">
+      <div class="connect-text">
+        <a href="#">Product</a>
+        <img src="images/icon-arrow-dark.svg" alt="dropdown arrow">
+      </div>
+      <div class="dropdown-menu-mobile">
+        <ul>
+          <li><a href="#">Overview</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Marketplace</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Integrations</a></li>
+        </ul>
+      </div>
+    </li>
+
+    <li class="connect">
+      <div class="connect-text">
+        <a href="#">Company</a>
+        <img src="images/icon-arrow-dark.svg" alt="dropdown arrow">
+      </div>
+      <div class="dropdown-menu-mobile">
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Careers</a></li>
+        </ul>
+      </div>
+    </li>
+
+    <li class="connect">
+      <div class="connect-text">
+        <a href="#">Connect</a>
+        <img src="images/icon-arrow-dark.svg" alt="dropdown arrow">
+      </div>
+      <div class="dropdown-menu-mobile">
+        <ul>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Newsletter</a></li>
+          <li><a href="#">LinkedIn</a></li>
+        </ul>
+      </div>
+    </li>
+
+    <li><a href="#">Login</a></li>
+    <li class="signup"><a href="#">Sign Up</a></li>
+  </ul>
+</div>
 <Section>
  
   <div class="Section-intro">
@@ -165,6 +215,6 @@
   </div></div>
 </footer>
 </section>
-
+<script src="script.js"></script>
 </body>
 </html>
